[gd_scene load_steps=2 format=3 uid="uid://cfhxem8utvnew"]

[ext_resource type="Script" path="res://menus/mainmenu.gd" id="1_pchiy"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -2.0
offset_right = -22.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pchiy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -51.0
offset_right = 43.5
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "teleporter"

[node name="notes" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "NOTES"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "EXIT"

[node name="Label" type="Label" parent="."]
modulate = Color(0, 1, 1, 1)
top_level = true
layout_mode = 2
offset_left = 24.0
offset_top = 7.0
offset_right = 1283.0
offset_bottom = 836.0
text = "fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf
fekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhffekwfyegjkfhagejhefagjkhegfjkhagfjkehgfjhkagejkhf"

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_teleporter_pressed"]
[connection signal="pressed" from="VBoxContainer/notes" to="." method="_on_notes_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
